# quant_finance

./: .env  .gitignore  bucket-policy.json  nohup.out  pyproject.toml
covariance-forecasting/: clean_data.py  config.py  covariance.py  forecast.py  run.ipynb  utils.py
crypto_rf/: README.md  clean.py  configs.py  features.py  save_hour_data.py  save_universe.py  utils.py
crypto_rf/automate/: upload_to_s3.py
