[tool.poetry]
name = "quant_finance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pandas = "^2.2.2"
numpy = "<2.0.0"
rpy2 = "^3.5.16"
pyportfolioopt = "^1.5.5"
notebook = "^7.2.1"
ipykernel = "^6.29.5"
boto3 = "^1.34.139"
scikit-learn = "^1.5.1"
tqdm = "^4.66.4"
black = {extras = ["jupyter"], version = "^24.4.2"}
matplotlib = "^3.9.1"
sagemaker = "^2.224.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
pylint = "^3.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
